--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.6.8",
+        "clsx": "^2.1.1",
+        "framer-motion": "^11.1.7",
+        "lucide-react": "^0.378.0",
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
-        "axios": "^1.6.8",
-        "lucide-react": "^0.378.0",
-        "framer-motion": "^11.1.7",
-        "clsx": "^2.1.1",
         "tailwind-merge": "^2.3.0"
     },
     "devDependencies": {
+        "@types/node": "25.2.2",
+        "@types/react": "19.2.13",
+        "autoprefixer": "^10.4.19",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "autoprefixer": "^10.4.19"
+        "typescript": "5.9.3"
     }
 }
