fix: update jsconfig.json for better path resolution

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -6,5 +6,16 @@
                 "./*"
             ]
         }
-    }
+    },
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "**/*.js",
+        "**/*.jsx",
+        ".next/types/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
