--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
+        "react-qr-code": "^2.0.18",
         "tailwind-merge": "^2.3.0"
     },
     "devDependencies": {
